# rustynotes

./: .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  index.solid.html  package-lock.json  package.json  pnpm-lock.yaml  rustynotesicon.icns
.github/workflows/: release.yml
.superpowers/brainstorm/17038-1774227808/: .server-stopped
.superpowers/brainstorm/55555-1774407097/: .server-info  layout-structure.html
crates/rustynotes-common/: Cargo.toml
crates/rustynotes-common/src/: lib.rs
crates/rustynotes-frontend/: Cargo.toml
crates/rustynotes-frontend/src/: app.rs  bridge.rs  main.rs  save.rs  state.rs  tauri_ipc.rs  theme.rs
crates/rustynotes-frontend/src/components/: mod.rs  save_indicator.rs  titlebar.rs  toolbar.rs
crates/rustynotes-frontend/src/components/editor/: mod.rs  source_editor.rs  split_pane.rs  wysiwyg_editor.rs
crates/rustynotes-frontend/src/components/navigation/: breadcrumb.rs  miller_columns.rs  mod.rs  sidebar.rs
crates/rustynotes-frontend/src/components/onboarding/: feature_tip.rs  mod.rs  welcome.rs
crates/rustynotes-frontend/src/components/preview/: markdown.rs  mod.rs  preview.rs
crates/rustynotes-frontend/src/components/settings/: mod.rs  settings_sidebar.rs  settings_window.rs  shared.rs
crates/rustynotes-frontend/src/components/settings/categories/: advanced.rs  appearance.rs  editor.rs  mod.rs  preview.rs  saving.rs  update.rs
crates/rustynotes-frontend/src/components/single_file/: mod.rs  overflow_menu.rs  slim_titlebar.rs
docs/superpowers/plans/: 2026-03-22-editor-modes.md  (+13 more)
js/: bridge-src.js  bridge.bundle.js  bundle-vendor.sh
resources/: rustynotes.entitlements
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: binary_watcher.rs  config.rs  fs_ops.rs  lib.rs  main.rs  markdown_parser.rs  menu.rs  updater.rs  watcher.rs
src-tauri/src/commands/: config.rs  export.rs  fs.rs  markdown.rs  mod.rs  update.rs  window_mgmt.rs
src-tauri/src/export/: html.rs  mod.rs
src/components/: Toolbar.tsx
src/lib/: ipc.ts  onboarding.ts  postprocess.ts  state.ts  theme.ts
src/styles/: base.css  settings.css
styles/: base.css  settings.css
styles/themes/: default-dark.json  default-light.json
(+32 files in other folders)
