[package]
name = "rustynotes"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustynotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
comrak = "0.51"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
thiserror = "2"
dirs = "6"
rustynotes-common = { path = "../crates/rustynotes-common" }
syntect = { version = "5", default-features = false, features = ["default-fancy", "html"] }
regex = "1"
html-escape = "0.2"
once_cell = "1"
tauri-plugin-window-state = "2"
ureq = "3"
semver = "1"
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

